# gralph

./: .gitignore  .goreleaser.yaml  .gralph.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Gralph.slnx  LICENSE  PRD.1.md  PRD.aot.md  PRD.core-decomposition.md  PRD.dotnet.md  PRD.generated.md  PRD.go.md  PRD.increase-coverage-1.md  PRD.increase-coverage-2.md  PRD.increase-coverage-20260128-214813.md  PRD.increase-coverage-20260129-075336.md  PRD.increase-coverage-20260129-112407.md  PRD.increase-coverage-20260129-135335.md  PRD.increase-coverage-20260129-152442.md  PRD.increase-coverage-20260129-164228.md  PRD.increase-coverage-3.md  PRD.increase-coverage-4.md  PRD.increase-coverage-5.md  PRD.increase-coverage-6.md  PRD.increase-coverage-7.md  PRD.increase-coverage-8.md  PRD.increase-coverage-9.md  PRD.increase-coverage.md  PRD.md  PRD.open-source.md  PRD.refactor.md  PRD.rs.md  PRD.template.md  PRD.tests-backends.md  PRD.tests-cli-config.md  (+18 more)
.github/: pull_request_template.md
cmd/: backends.go  completion.go  config.go  logs.go  prd.go  resume.go  root.go  server.go  start.go  status.go  stop.go  worktree.go
completions/: gralph.bash  gralph.fish  gralph.zsh  rloop.bash  rloop.zsh
config/: default.yaml
docs/: AOT-METRICS.md  backends.md  cli.md  configuration.md  (+3 more)
gralph-rs/: Cargo.toml  build.rs
gralph-rs/src/: config.rs  core.rs  lib.rs  main.rs  notify.rs  prd.rs  server.rs  state.rs
gralph-rs/src/backend/: codex.rs  mod.rs
gralph-rs/tests/: backend_codex.rs  backend_gemini.rs  backend_opencode.rs
(+166 files in other folders)
